fixing some update

--- a/events.html
+++ b/events.html
@@ -15,37 +15,37 @@
  </head>
  <body >
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
-    <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav" >
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">ABOUT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="events.html">EVENTS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="news.html">NEWS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="alumni.html">ALUMNI</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="contact.html">CONTACT</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae Sorority  <hr style="margin:0px; color:#d79b2a; "> <h1 style="font-size: 25px;"> Sorore Lex Atheneum</h1>  </span>  </a>
+     <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+       <ul class="navbar-nav" >
+         <li class="nav-item active">
+           <a class="nav-link" href="index.html">HOME</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="about.html">ABOUT</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link " href="events.html">EVENTS</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link " href="news.html">NEWS</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link " href="alumni.html">ALUMNI</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link " href="contact.html">CONTACT</a>
+         </li>
+       </ul>
+     </div>
+   </nav>
 
 
 
@@ -56,10 +56,10 @@
         <div class="event-title" align="center">
           <h1>Verdict: The Biggest Med-Law Party</h1>
           <h3>December 12, 2009</h3>
-             <hr style="size: 10%;"> 
+             <hr style="size: 10%;">
         </div>
         <div class="event-1-body">
-        
+
              <div class="event-container-body-img" align="center">
                <img src="assets/img/verdict2.jpg" />
              </div>
@@ -73,10 +73,10 @@
 
 
     <div class="event-2">
-      <div class="event-title"> 
+      <div class="event-title">
         <h1>FORTIS! Regina: Bigger, Better, Stronger at 4</h1>
         <h3>August 22, 2009</h3>
-         <hr style="size: 10%;"> 
+         <hr style="size: 10%;">
       </div>
       <div class="event-2-body">
         <div class="event-container-body-img" align="center">
@@ -94,7 +94,7 @@
     <div class="event-title">
       <h1>Marillac Hills Outreach</h1>
       <h3>June 6, 2009</h3>
-       <hr style="size: 10%;"> 
+       <hr style="size: 10%;">
     </div>
     <div class="event-3-body">
       <div class="event-container-body-img" align="center">
@@ -112,7 +112,7 @@
   <div class="event-title">
     <h1>Regina Iustitiae Bar Operations 2009</h1>
     <!-- <h3>December 12, 2009</h3> -->
-     <hr style="size: 10%;"> 
+     <hr style="size: 10%;">
   </div>
   <div class="event-4-body">
     <div class="event-container-body-img" align="center">
@@ -121,7 +121,7 @@
    <div class="event-4-text">
     <p style="text-indent: 50px; text-align: justify; padding-top:20px;"> he Bar Operations (Bar Ops) is the most important project of the sorority as it is centered on all the activities related to preparing for the Bar Examinations (Bar). The Bar is the most crucial episode in a law student’s life. It is a rite of passage that one must overcome in order to finally become a lawyer. </p>
 
-    <p style="text-indent: 50px; text-align: justify; "> 
+    <p style="text-indent: 50px; text-align: justify; ">
     One of the sorority’s main thrusts and contributions to its members is the support given to the bar takers (barrister) during the Bar Ops. Each barrister is assigned a “buddy” who is a junior sorority sister who helps her all throughout the experience, from gathering all the exam requirements, to making sure that the study schedule is followed, to giving moral support. The sorority supplies her barristers with review materials, provides hotel accommodations (all expense paid), transportation, as well as the Sunday study area, and other needs during all four Sundays of the examination month.</p>
     <p style="text-indent: 50px; text-align: justify;"> The significance of a very personalized Bar Ops experience is that it minimizes the ordeal that the barristers undergo through the dedication and support of the sisters- alumnae and residents alike. At the end of the Bar, the sorority comes together to celebrate everyone’s hard work and success.</p>
     <p> The Bar Ops experience not only helps the barristers but also the undergrads to stay true to the goal of becoming full-fledged Atenean lawyers.</p>
@@ -132,7 +132,7 @@
 <div class="event-5" style="padding-bottom: 50px;">
   <div class="event-title">
     <h1>Regina Royal Raffle Winners</h1>
-     <hr style="size: 10%;"> 
+     <hr style="size: 10%;">
   </div>
   <div class="event-5-body">
     <div class="event-container-body-img" align="center">
@@ -148,7 +148,7 @@
   <div class="event-title">
     <h1>Quirino Memorial Medical Center Outreach</h1>
     <h3>January 31,2009</h3>
-     <hr style="size: 10%;"> 
+     <hr style="size: 10%;">
   </div>
   <div class="event-6-body">
     <div class="event-container-body-img" align="center">
