--- a/about.html
+++ b/about.html
@@ -15,37 +15,37 @@
  </head>
  <body >
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
-  <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-    <ul class="navbar-nav" >
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">HOME</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">ABOUT</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="events.html">EVENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="news.html">NEWS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="alumni.html">ALUMNI</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="contact.html">CONTACT</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae Sorority  <hr style="margin:0px; color:#d79b2a; "> <h1 style="font-size: 25px;"> Sorore Lex Atheneum</h1>  </span>  </a>
+     <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+       <ul class="navbar-nav" >
+         <li class="nav-item active">
+           <a class="nav-link" href="index.html">HOME</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="about.html">ABOUT</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link " href="events.html">EVENTS</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link " href="news.html">NEWS</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link " href="alumni.html">ALUMNI</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link " href="contact.html">CONTACT</a>
+         </li>
+       </ul>
+     </div>
+   </nav>
 
 
 
@@ -58,7 +58,7 @@
     <div class="container" align="center">
       <span class="d-inline-block">
        <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a">
-       <img src="assets/img/logo.png" style="display: inline-block;  margin-bottom: 40px;"> 
+       <img src="assets/img/logo.png" style="display: inline-block;  margin-bottom: 40px;">
        <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a"></span>
      </div>
 
@@ -74,7 +74,7 @@
 </div>
 </section>
 
-<section> 
+<section>
   <div class="container mission" align="center">
     <div class="mission-header">
 
@@ -85,7 +85,7 @@
     </div>
     <div class="mission-body">
       <p style="text-indent: 50px; text-align: justify;">
-        Regina Iustitiae Sorority is an organization of women who are strong leaders, devoted to upholding justice and to excelling in the respective niches chosen by them in life; who believe that the act of one reflects that of the whole, and thus act as one through interdependence based on complete trust on one another; whose treatment of one another and of others is that of sisters to one another, that is, of being one-half of another; who, being sisters, recognize that the other is one’s superior in one way or another; and who possess consistent dedication to the organization’s goals, even keeping to oneself those communication made in utmost confidentiality. 
+        Regina Iustitiae Sorority is an organization of women who are strong leaders, devoted to upholding justice and to excelling in the respective niches chosen by them in life; who believe that the act of one reflects that of the whole, and thus act as one through interdependence based on complete trust on one another; whose treatment of one another and of others is that of sisters to one another, that is, of being one-half of another; who, being sisters, recognize that the other is one’s superior in one way or another; and who possess consistent dedication to the organization’s goals, even keeping to oneself those communication made in utmost confidentiality.
       </p>
     </div>
   </div>
@@ -93,7 +93,7 @@
 
 
 
-<section> 
+<section>
   <div class="container vision" align="center">
     <div class="vision-header">
 
@@ -107,7 +107,7 @@
        The Regina Iustitiae Sorority is an independent, non-profit organization of women from the Ateneo School of Law with the ultimate vision of being the catalyst for women empowerment not only in the law school but more importantly, in Philippine society.
      </p>
      <p style="text-indent: 50px; text-align: justify;">
-      Regina Iustitiae Sorority aspires to achieve this by means of an established sisterhood that leads and serves the community through justice in any of its forms.  Armed with academic excellence, legal wisdom and commitment to pursue a journey towards individual and collective intellectual and moral triumph, the members of this Sorority are envisioned to embody what women of the law should aim to be. The Regina Iustitiae Sorority will be an organization of women in the legal profession whose societal significance is both acknowledged and applauded. 
+      Regina Iustitiae Sorority aspires to achieve this by means of an established sisterhood that leads and serves the community through justice in any of its forms.  Armed with academic excellence, legal wisdom and commitment to pursue a journey towards individual and collective intellectual and moral triumph, the members of this Sorority are envisioned to embody what women of the law should aim to be. The Regina Iustitiae Sorority will be an organization of women in the legal profession whose societal significance is both acknowledged and applauded.
     </p>
   </div>
 </div>
@@ -117,7 +117,7 @@
 
 
 
-<section> 
+<section>
   <div class="container what-does-it-take" align="center">
     <div class="what-does-it-take-header">
 
