--- a/contact.html
+++ b/contact.html
@@ -14,50 +14,50 @@
   <script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body >
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
-  <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-    <ul class="navbar-nav" >
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">HOME</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">ABOUT</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="events.html">EVENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="news.html">NEWS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="alumni.html">ALUMNI</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="contact.html">CONTACT</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae Sorority  <hr style="margin:0px; color:#d79b2a; "> <h1 style="font-size: 25px;"> Sorore Lex Atheneum</h1>  </span>  </a>
+    <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav" >
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="events.html">EVENTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="news.html">NEWS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="alumni.html">ALUMNI</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="contact.html">CONTACT</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
 
 <section>
   <div class="container" style="padding: 50px;" align="center">
-    
+
 <div class="container">
   <span class="d-inline-block">
            <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a">
-           <img src="assets/img/logo.png" style="display: inline-block;  margin-bottom: 40px;"> 
+           <img src="assets/img/logo.png" style="display: inline-block;  margin-bottom: 40px;">
            <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a"></span>
 </div>
-<data class="container form" style="padding-top: 20px;"> 
+<data class="container form" style="padding-top: 20px;">
 <form action="mailto:francisgonzales.private@gmail.com" method="post" enctype="text/plain">
 Name<br>
 <input type="text"  class ="form-control" name="name" size="10" required="true" style="width:50%;"><br>
