--- a/news2.html
+++ b/news2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>REGINA IUSITIAE</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext" rel="stylesheet">
@@ -12,110 +12,118 @@
 </head>
 <body >
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
-  <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-    <ul class="navbar-nav" >
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">HOME</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">ABOUT</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="events.html">EVENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="news.html">NEWS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="alumni.html">ALUMNI</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="contact.html">CONTACT</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">
+      <span> Regina Iustitiae Sorority <hr> <h1> Sorore Lex Atheneum</h1></span>
+    </a>
+    <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav" >
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="events.html">EVENTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="news.html">NEWS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="alumni.html">ALUMNI</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="contact.html">CONTACT</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <section>
-    <div class="container">
+    <div class="container news-container">
       <div class="news-title">
-        <h1>Ateneo Send-offs! 2009 Bar</h1>
-        <!-- <h3>November 18-20, 2009</h3> -->
+        <h1>Sereno - Quo Warranto</h1>
       </div>
       <div class="news-body">
         <div class="news-body-img" align="center">
           <img src="assets/img/news1.jpg" />
         </div>
-        <div class="new-body-content">
-       <p style="text-indent: 50px; text-align: justify;">  The Bar Examinations, no doubt, are the biggest hurdle in every law student’s life. It takes months of preparation and psyching up. The Ateneo Law School community, in being one with its barristers, holds an annual Send Offs ceremony on the eve of the first Bar Exam day.  This year’s Send Offs was co-headed by Nancy Martinez and Regina Iustitiae’s Nicka Hosaka (Batch 4-06).  On 05 September 2009, the 2009 Bar candidates, along with their families, friends, supporters and the rest of the ALS community gathered to celebrate the Send Offs mass presided by Fr. Joaquin Bernas, SJ at the ALS Chapel. Fr. B never fails to give those much needed words of wisdom and inspiration to the barristers. After the anticipated mass, ALS Associate Dean Atty. Sedfrey Candelaria delivered a short message to the barristers. To further boost the barristers’ psyche and to add a dash of school spirit, the solemn ceremony was culminated by Ateneo cheers led by the ALS-based Blue Babble Band and the singing of A Song for Mary.
-      </p>
+        <div class="news-body-content">
+          <p class="sentence">Regina Iustitiae Sorority condemns the Supreme Court’s decision to grant the quo warranto petition against now former Chief Justice Maria Lourdes Sereno.  </p>
+          <p class="sentence">It is at times like these that we, as members and students of the legal profession, must fight harder and speak louder to uphold the rule of law.
+          </p>
+          <p class=""> The 1987 Constitution embodies “The President, the Vice President, the Members of the Supreme Court, the Members of the Constitutional Commissions, and the Ombudsman may be removed from office on impeachment for, and conviction of, culpable violation of the Constitution, treason, bribery, graft and corruption, other high crimes, or betrayal of public trust.”
+          </p>
+          <p class="sentence"> For the sake of justice, we cannot stand by and say, we 'MAY' uphold our Constitution. We 'MUST' uphold our Constitution and continue to fight for judicial independence.</p>
+          <p class="sentence">We must continue to strive to uphold what is right and now, more than ever, our nation needs us to take a stand. We must not be afraid. We must continue to fight.
+          </p>
+
         </div>
       </div>
     </div>
   </section>
-<footer>
-  <section>
-    <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
-      <div class="footer-header" align="center">
-        <img src="assets/img/logo.png" />
-        <h4>Regina Iustitiae Sorority</h4>
-        <h5>Lorem Ipsum Here</h5>
+  <footer>
+    <section>
+      <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
+        <div class="footer-header" align="center">
+          <img src="assets/img/logo.png" />
+          <h4>Regina Iustitiae Sorority</h4>
+          <h5>Lorem Ipsum Here</h5>
+        </div>
+        <div class="navbar-footer" align="center" style="padding-top: 10px;">
+
+          <span class="d-inline-block">
+            <p>ABOUT</p>
+            <p>|</p>
+            <p >ACHIEVEMENTS</p>
+            <p >|</p>
+            <p >EVENTS</p>
+            <p >|</p>
+            <p >NEWS</p>
+            <p >|</p>
+            <p >ALUMNI</p>
+            <p >|</p>
+            <p >CONTACT US</p></P>
+          </span>
+        </div>
+
+        <div class="footer-community" align="center" style="padding-top: 10px;">
+          <h2> Ateneo Community</h2>
+          <span class="d-inline-block">
+            <p>ATENEO LAW SCHOOL</p>
+            <p>|</p>
+            <p >ADMISSION RESULT 2009</p>
+            <p >|</p>
+            <p >ADMISSION REQUIREMENTS</p>
+            <p >|</p>
+            <p >FAQs</p>
+          </span>
+        </div>
+
+
+        <div class="footer-body">
+          <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-3"></div>
+            <div class="col-sm-3"></div>
+            <div class="col-sm-3"></div>
+          </div>
+        </div>
       </div>
-      <div class="navbar-footer" align="center" style="padding-top: 10px;">
 
-        <span class="d-inline-block">
-         <p>ABOUT</p>
-         <p>|</p>
-         <p >ACHIEVEMENTS</p>
-         <p >|</p>
-         <p >EVENTS</p>
-         <p >|</p>
-         <p >NEWS</p>
-         <p >|</p>
-         <p >ALUMNI</p>
-         <p >|</p>
-         <p >CONTACT US</p></P>
-       </span>
-     </div>
+    </section>
+  </footer>
 
-     <div class="footer-community" align="center" style="padding-top: 10px;">
-      <h2> Ateneo Community</h2>
-      <span class="d-inline-block">
-       <p>ATENEO LAW SCHOOL</p>
-       <p>|</p>
-       <p >ADMISSION RESULT 2009</p>
-       <p >|</p>
-       <p >ADMISSION REQUIREMENTS</p>
-       <p >|</p>
-       <p >FAQs</p>
-     </span>
-   </div>
-
-
-   <div class="footer-body">
-    <div class="row">
-      <div class="col-sm-3"></div>
-      <div class="col-sm-3"></div>
-      <div class="col-sm-3"></div>
-      <div class="col-sm-3"></div>
-    </div>
-  </div>
-</div>
-
-</section>
-</footer>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
