--- a/news3.html
+++ b/news3.html
@@ -1,111 +1,115 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>REGINA IUSITIAE</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="stylesheet" href="assets/css/ionicons.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext" rel="stylesheet">
-  <script src="assets/js/modernizr-2.8.3.min.js"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>REGINA IUSITIAE</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="assets/css/styles.css">
+<link rel="stylesheet" href="assets/css/ionicons.min.css">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext" rel="stylesheet">
+<script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body >
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
-  <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-    <ul class="navbar-nav" >
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">HOME</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">ABOUT</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="events.html">EVENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="news.html">NEWS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="alumni.html">ALUMNI</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="contact.html">CONTACT</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-  <section>
-    <div class="container">
-      <div class="news-title">
-        <h1>CVC Law Debates</h1>
-        <!-- <h3>November 18-20, 2009</h3> -->
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">
+      <span> Regina Iustitiae Sorority <hr> <h1> Sorore Lex Atheneum</h1></span>
+    </a>
+    <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav" >
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="events.html">EVENTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="news.html">NEWS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="alumni.html">ALUMNI</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="contact.html">CONTACT</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+
+<section>
+  <div class="container news-container">
+    <div class="news-title">
+      <h1>Press4Progress</h1>
+    </div>
+    <div class="news-body">
+      <div class="news-body-img" align="center">
+        <img src="assets/img/cvc.jpg" />
       </div>
-      <div class="news-body">
-        <div class="news-body-img" align="center">
-          <img src="assets/img/cvc.jpg" />
-        </div>
-        <div class="new-body-content">
-    <p style="text-indent: 50px; text-align: justify;"> The ANC CVC Law Debates marks its 2nd year this 2009 as one of the most-watched and highest rated shows, where top law schools battle live on national television over current events and legal controversies and issues.  Representing the Ateneo Law School (ALS) were Glenn Tuazon, Joseph Dela Cuesta and Regina Iustitiae’s very own Kira Ang (Batch 6-07).  The team made it through the octafinals, quarterfinals and semi-finals to finally meet Ateneo de Davao head on at the finals.  The issue during the finals was about the necessity, beneficiality and practicability of President Arroyo’s putting a ceiling on the prices of some medicines, pursuant to the Cheaper Medicines Act.  The ALS team was on the negative side, opposing the price ceiling.  However, Ateneo de Davao proved to be the better team and took home the Grand Prize.  Regina Iustitiae is still very proud of their sis, Kira Ang, for representing the Ateneo Law School in this year’s CVC Law Debates.  </p>
-        </div>
+      <div class="news-body-content">
+<p> Regina Iustitiae Sorority, as a sisterhood which forwards women empowerment, joins the celebration of International Women’s Day held last March 2018. In line with such celebration, the Ateneo Community came together in the culmination of Women’s Week. During said event, lawyers and students shared their own story of breaking free from gender stereotypes and discrimination.Our very own Frances Siapno stood up as she encouraged everyone to stand up against discrimination and to #PressforProgress. In our fight against misogyny, Frances tells us to be brave and confident.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 <footer>
-  <section>
-    <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
-      <div class="footer-header" align="center">
-        <img src="assets/img/logo.png" />
-        <h4>Regina Iustitiae Sorority</h4>
-        <h5>Lorem Ipsum Here</h5>
-      </div>
-      <div class="navbar-footer" align="center" style="padding-top: 10px;">
+<section>
+  <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
+    <div class="footer-header" align="center">
+      <img src="assets/img/logo.png" />
+      <h4>Regina Iustitiae Sorority</h4>
+      <h5>Lorem Ipsum Here</h5>
+    </div>
+    <div class="navbar-footer" align="center" style="padding-top: 10px;">
 
-        <span class="d-inline-block">
-         <p>ABOUT</p>
-         <p>|</p>
-         <p >ACHIEVEMENTS</p>
-         <p >|</p>
-         <p >EVENTS</p>
-         <p >|</p>
-         <p >NEWS</p>
-         <p >|</p>
-         <p >ALUMNI</p>
-         <p >|</p>
-         <p >CONTACT US</p></P>
-       </span>
-     </div>
-
-     <div class="footer-community" align="center" style="padding-top: 10px;">
-      <h2> Ateneo Community</h2>
       <span class="d-inline-block">
-       <p>ATENEO LAW SCHOOL</p>
+       <p>ABOUT</p>
        <p>|</p>
-       <p >ADMISSION RESULT 2009</p>
+       <p >ACHIEVEMENTS</p>
        <p >|</p>
-       <p >ADMISSION REQUIREMENTS</p>
+       <p >EVENTS</p>
        <p >|</p>
-       <p >FAQs</p>
+       <p >NEWS</p>
+       <p >|</p>
+       <p >ALUMNI</p>
+       <p >|</p>
+       <p >CONTACT US</p></P>
      </span>
    </div>
 
+   <div class="footer-community" align="center" style="padding-top: 10px;">
+    <h2> Ateneo Community</h2>
+    <span class="d-inline-block">
+     <p>ATENEO LAW SCHOOL</p>
+     <p>|</p>
+     <p >ADMISSION RESULT 2009</p>
+     <p >|</p>
+     <p >ADMISSION REQUIREMENTS</p>
+     <p >|</p>
+     <p >FAQs</p>
+   </span>
+ </div>
 
-   <div class="footer-body">
-    <div class="row">
-      <div class="col-sm-3"></div>
-      <div class="col-sm-3"></div>
-      <div class="col-sm-3"></div>
-      <div class="col-sm-3"></div>
-    </div>
+
+ <div class="footer-body">
+  <div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-3"></div>
+    <div class="col-sm-3"></div>
+    <div class="col-sm-3"></div>
   </div>
+</div>
 </div>
 
 </section>
