--- a/news1.html
+++ b/news1.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>REGINA IUSITIAE</title>
-  <!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"> -->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/ionicons.min.css">
@@ -12,74 +11,61 @@
   <script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body >
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#" ><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">  <span> Regina Iustitiae  <hr style="margin:0px; "> Another Test  </span>  </a>
-  <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-    <ul class="navbar-nav" >
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">HOME</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">ABOUT</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="events.html">EVENTS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="news.html">NEWS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="alumni.html">ALUMNI</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="contact.html">CONTACT</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">
+      <span> Regina Iustitiae Sorority <hr> <h1> Sorore Lex Atheneum</h1></span>
+    </a>
+    <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav" >
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="achievements.html">ACHIEVEMENTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="events.html">EVENTS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="news.html">NEWS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="alumni.html">ALUMNI</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="contact.html">CONTACT</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <section>
-    <div class="container">
+    <div class="container news-container">
       <div class="news-title">
-        <h1>National Moot Court Competition on International Humanitarian Law</h1>
+        <h1>Regina Gives Back: Winter Wish Come True</h1>
         <h3>November 18-20, 2009</h3>
       </div>
       <div class="news-body" >
         <div class="news-body-img" align="center">
           <img src="assets/img/news1.jpg" class="news-img" />
         </div>
-        <div class="new-body-content">
-          <p style="text-indent: 50px; text-align: justify; padding: 30px;">Ateneo Law School bested 15 other law schools in the recent 2009 National Moot Court Competition on International Humanitarian Law sponsored by the International Committee on the Red Cross last November 18-20. Team Ateneo won as overall champion and was also given the award for Best Memorial.  Regina Iustitiae’s very own Michelle Suarez (Batch 8-08) was awarded Best Mooter in the Final Rounds held at the Supreme Court En Banc Session Hall. Ateneo will be up against many of the top law schools in Asia and Australia as they represent the Philippines in the International Rounds for the Red Cross Moot Court Competition which will be held in Hong Kong, from March 5-6, 2010. </p>
+        <div class="news-body-content">
+          <p class="sentence">Regina Iustitiae decided to celebrate Christmas a little differently this year. 2014 has generally been very kind to our sorority and we wanted to show our gratitude by sharing the love and spreading a little holiday magic. Our Winter Wish Bazaar’s beneficiary, Make-a-Wish Philippines, gave us the chance to make a couple of wishes come true. 
+          </p>
+          <p class="sentence"> Last Sunday, December 14, we were able to spend time with two little fighters. We met Sweet Erine, who is currently battling Acute Lymphocytic Leukemia and wished for a Hello Kitty Dollhouse, and Strong Ralph, who is beating his Neuroblastoma and wished for a racecar toy. </p>
+          <p class="sentence"> The party was full of Christmas spirit. The wish kids and the sisses had fun decorating cookies and making colorful holiday cards. The sorority’s latest batches (Batches 26 – 28) provided the entertainment through skits and songs. After the program, it was time for the big reveal! Erine and Ralph were given blindfolds to put on before the gifts were given. At that point, you could feel already feel their excitement. Go through the album to see their precious reactions! Of course, no party is complete without food. Everyone – the resident and alumnae sisses, wish kids, their parents and Make-A-Wish representatives – enjoyed a simple potluck lunch. </p>
+          <p class="sentence"> While preparing for the event, we were operating under the mindset that it would just be the sorority giving the gifts to Erine and Ralph. Perhaps it was the holiday magic mixed with Christmas spirit but it turned out that we, too, were on the receiving end of the day’s blessings. It was definitely a learning experience for us and it has caused a positive shift in perspective. </p>
+          <p class="sentence"> From Make-A-Wish, we saw spirit and passion from their members and volunteers. They devote a tremendous amount of energy to organizing wish grants and their dedication to their cause is inspiring. They truly are the forces behind #wishpower.</p>
+          <p class="sentence"> From Erine and Ralph, we saw how the tiny bodies of these young soldiers can house such big, courageous hearts and even bigger, braver dreams. Despite the physical and emotional toll that they go through, they have maintained the childlike sense of wonder and magic and the genuine belief that wishes do come true. The sorority was fortunate to have played a part in preserving that youthful innocence.</p>
+          <p class="sentence">Finally, from their parents, we saw the infinite capacity of a human being to love, support and provide strength. It isn’t easy to be optimistic and hopeful when you know that your child, an extension of your self and your heart, has to struggle on a daily basis. Somehow, they do and they do it well. They served as a good reminder to us that when you have family (much like our sorority), as long as you are on this Earth, you will never walk alone.  </p>
+          <p class="sentence"> We’d like to thank Make-A-Wish Philippines for the opportunity as well as Erine, Ralph and their parents for spending time with us. From the bottom of our hearts, we wish all of you a blessed Christmas filled with peace, love and laughter. </p>
+
         </div>
       </div>
     </div>
