fixing index page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#"><img src="assets/img/logo.png" class="d-inline-block align-top navbar-image">
-      <span> Regina Iustitiae Sorority <hr> <h1> Sorore Lex Atheneum</h1></span>
+      <span> Regina Iustitiae Sorority <hr> <h1> Sorore Lex Atheneum</h1> </span>
     </a>
     <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -85,9 +85,9 @@
       <div class="container about-container">
         <div class="about-header" >
           <span class="d-inline-block">
-            <hr>
-            <img src="assets/img/logo.png">
-            <hr>
+            <hr class="hr-title">
+            <img class="img-title" src="assets/img/logo.png">
+            <hr class="hr-title">
           </span>
         </div>
 
@@ -103,7 +103,19 @@
             <button type="button" class="btn-read-more">Learn more about Regina</button>
           </div>
         </div>
+      </div>
+    </section>
 
+    <section>
+      <div class="container achievements-container">
+        <div class="home-achievements-header" align="center">
+          <span class="d-inline-block header-span">
+            <hr class="hr-title">
+            <p class="title-headers">Achievements</p>
+            <hr class="hr-title">
+          </span>
+        </div>
+        </div
       </section>
 
 
@@ -136,146 +148,77 @@
                 <div class="container" align="center">
                   <div class="about-read-more" align="center">
                     <button type="button" class="btn-read-more" style="margin-top: 50px;">View More </button>
-                  </div>
                 </div>
+            <div class="home-news-header" align="center">
               </div>
             </div>
           </section>
 
-          <section>
             <div class="container-event">
               <div class="event-header">
                 <span class="d-inline-block home-event-header">
                   <hr style=" padding-right: 500px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
                   <p style="display: inline-block;  margin-bottom: 40px;">Events</p>
-                  <hr style=" padding-right: 500px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
-                </div>
 
                 <div class="container">
+                    <div class="col-sm-3">
+                    </div>
+                    <div class="col-sm-3">
+                    </div>
+
+
+          <footer>
+            <section>
+              <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
+                <div class="footer-header" align="center">
+                  <img src="assets/img/logo.png" />
+                  <h4>Regina Iustitiae Sorority</h4>
+                  <h5>Lorem Ipsum Here</h5>
+                </div>
+                <div class="navbar-footer" align="center" style="padding-top: 10px;">
+
+                  <span class="d-inline-block">
+                    <p>ABOUT</p>
+                    <p>|</p>
+                    <p >ACHIEVEMENTS</p>
+                    <p >|</p>
+                    <p >EVENTS</p>
+                    <p >|</p>
+                    <p >NEWS</p>
+                    <p >|</p>
+                    <p >ALUMNI</p>
+                    <p >|</p>
+                    <p >CONTACT US</p></P>
+                  </span>
+                </div>
+
+                <div class="footer-community" align="center" style="padding-top: 10px;">
+                  <h2> Ateneo Community</h2>
+                  <span class="d-inline-block">
+                    <p>ATENEO LAW SCHOOL</p>
+                    <p>|</p>
+                    <p >ADMISSION RESULT 2009</p>
+                    <p >|</p>
+                    <p >ADMISSION REQUIREMENTS</p>
+                    <p >|</p>
+                    <p >FAQs</p>
+                  </span>
+                </div>
+
+
+                <div class="footer-body">
                   <div class="row">
-                    <div class="col-sm-3">
-                      <img class="card-img" src="assets/img/fortis.jpg" alt="Card image" style="width: 250px; height: 250px; background-size: cover;">
-                    </div>
-
-                    <div class="col-sm-3">
-                      <img class="card-img" src="assets/img/verdict2.jpg" alt="Card image" style="width: 250px; height: 250px; background-size:cover; ">
-                    </div>
-
-                    <div class="col-sm-3">
-                      <img class="card-img" src="assets/img/eventhome.jpg" alt="Card image" style="width: 250px; height: 250px; background-size: cover;">
-                    </div>
-
-                    <div class="col-sm-3">
-                      <div class="view-more-event card-img" style="width: 250px; height: 250px; background-size: cover; background-color: #461251; text-align: center;">
-                        <h2> View <br/>More <br/>Events</h2>
-                      </div>
-                    </div>
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3"></div>
                   </div>
                 </div>
               </div>
             </section>
-
-
-            <div class="container-news">
-
-              <div class="news-header">
-                <span class="d-inline-block home-event-header">
-                  <hr style=" padding-right: 500px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
-                  <p style="display: inline-block;  margin-bottom: 40px;">News</p>
-                  <hr style=" padding-right: 500px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
-                </div>
-
-
-                <div class="container">
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <div class="news1">
-                        <img src="assets/img/news1.jpg" alt="Avatar" class="image" >
-                        <div class="overlay">National Moot Court Competition on International Humanitarian Lawn</div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-3">
-                      <div class=" news1">
-                        <img src="assets/img/cvc.jpg" alt="Avatar" class="image" >
-                        <div class="overlay">CVC Law Debates</div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-3">
-                      <div class="news1">
-                        <img src="assets/img/news1.jpg" alt="Avatar" class="image" >
-                        <div class="overlay">National Moot Court Competition on International Humanitarian Lawn</div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-3">
-                      <div class=" news1">
-                        <img src="assets/img/news1.jpg" alt="Avatar" class="image" >
-                        <div class="overlay">National Moot Court Competition on International Humanitarian Lawn</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="about-read-more" align="center">
-                <button type="button" class="btn-read-more">Read More</button>
-              </div>
-
-            </div>
-            <footer>
-              <section>
-                <div class="container-fluid" style="background-color: #461251; padding-top: 30px;">
-                  <div class="footer-header" align="center">
-                    <img src="assets/img/logo.png" />
-                    <h4>Regina Iustitiae Sorority</h4>
-                    <h5>Lorem Ipsum Here</h5>
-                  </div>
-                  <div class="navbar-footer" align="center" style="padding-top: 10px;">
-
-                    <span class="d-inline-block">
-                      <p>ABOUT</p>
-                      <p>|</p>
-                      <p >ACHIEVEMENTS</p>
-                      <p >|</p>
-                      <p >EVENTS</p>
-                      <p >|</p>
-                      <p >NEWS</p>
-                      <p >|</p>
-                      <p >ALUMNI</p>
-                      <p >|</p>
-                      <p >CONTACT US</p></P>
-                    </span>
-                  </div>
-
-                  <div class="footer-community" align="center" style="padding-top: 10px;">
-                    <h2> Ateneo Community</h2>
-                    <span class="d-inline-block">
-                      <p>ATENEO LAW SCHOOL</p>
-                      <p>|</p>
-                      <p >ADMISSION RESULT 2009</p>
-                      <p >|</p>
-                      <p >ADMISSION REQUIREMENTS</p>
-                      <p >|</p>
-                      <p >FAQs</p>
-                    </span>
-                  </div>
-
-
-                  <div class="footer-body">
-                    <div class="row">
-                      <div class="col-sm-3"></div>
-                      <div class="col-sm-3"></div>
-                      <div class="col-sm-3"></div>
-                      <div class="col-sm-3"></div>
-                    </div>
-                  </div>
-                </div>
-              </section>
-            </footer>
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-          </body>
-          </html>
+          </footer>
+          <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        </body>
+        </html>
