--- a/news2.html
+++ b/news2.html
@@ -53,7 +53,7 @@
       </div>
       <div class="news-body">
         <div class="news-body-img" align="center">
-          <img src="assets/img/news1.jpg" />
+          <img src="assets/img/waranto1.png" class="img-fluid news-img" style="height:500px;" />
         </div>
         <div class="news-body-content">
           <p class="sentence">Regina Iustitiae Sorority condemns the Supreme Court’s decision to grant the quo warranto petition against now former Chief Justice Maria Lourdes Sereno.  </p>
