--- a/news3.html
+++ b/news3.html
@@ -55,7 +55,7 @@
     </div>
     <div class="news-body">
       <div class="news-body-img" align="center">
-        <img src="assets/img/cvc.jpg" />
+        <img src="assets/img/press.jpg" class="img-fluid news-img" style="height:500px; " />
       </div>
       <div class="news-body-content">
 <p> Regina Iustitiae Sorority, as a sisterhood which forwards women empowerment, joins the celebration of International Women’s Day held last March 2018. In line with such celebration, the Ateneo Community came together in the culmination of Women’s Week. During said event, lawyers and students shared their own story of breaking free from gender stereotypes and discrimination.Our very own Frances Siapno stood up as she encouraged everyone to stand up against discrimination and to #PressforProgress. In our fight against misogyny, Frances tells us to be brave and confident.</p>
