--- a/news1.html
+++ b/news1.html
@@ -49,11 +49,10 @@
     <div class="container news-container">
       <div class="news-title">
         <h1>Regina Gives Back: Winter Wish Come True</h1>
-        <h3>November 18-20, 2009</h3>
       </div>
       <div class="news-body" >
         <div class="news-body-img" align="center">
-          <img src="assets/img/news1.jpg" class="news-img" />
+          <img src="assets/img/news1-1.jpg" class="img-fluid news-img" />
         </div>
         <div class="news-body-content">
           <p class="sentence">Regina Iustitiae decided to celebrate Christmas a little differently this year. 2014 has generally been very kind to our sorority and we wanted to show our gratitude by sharing the love and spreading a little holiday magic. Our Winter Wish Bazaar’s beneficiary, Make-a-Wish Philippines, gave us the chance to make a couple of wishes come true. 
