--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img class="d-block w-100" src="assets/img/banner2.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="assets/img/banner3.jpg" alt="Third slide">
+          <img class="d-block w-100" src="assets/img/banner3.png" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -115,56 +115,57 @@
             <hr class="hr-title">
           </span>
         </div>
+
+
+        <div class="container">
+          <div class="wrapper">
+            <div class="box a"> <img class="card-img-bottom" src="assets/img/achiever1.jpg"></div>
+            <div class="box b"> <img class="card-img-bottom" src="assets/img/achiever3.jpg" style="padding-bottom: 10px;">  <img class="card-img-bottom" src="assets/img/achiever4.jpg" style="padding-bottom: 10px;"> <img class="card-img-bottom" src="assets/img/achievement2.jpg"></div>
+            <div class="box c"> <img class="card-img-bottom" src="assets/img/achievement.jpg"></div>
+            <div class="box d"> <img class="card-img-bottom" src="assets/img/achiever2.jpg"></div>
+          </div>
+        </div>
+
+
         </div
       </section>
 
 
-
       <section>
-        <div class="container">
-          <div class="achiver-header" align="center">
+        <div class="container-event">
+          <div class="home-event-header" align="center">
+            <span class="d-inline-block header-span ">
+              <hr class="hr-title">
+              <p class="title-headers">Events</p>
+              <hr class="hr-title">
+            </div>
 
-            <span class="d-inline-block">
-              <hr style=" padding-right: 400px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
-              <p style="display: inline-block;  margin-bottom: 40px;">Achievements</p>
-              <hr style=" padding-right: 400px; display: inline-block; margin-left:20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a;  margin-bottom: 5px;"></span>
+            <div class="container">
+              <div class="wrapper2">
+                <div class="box2 aa"><img class="card-img-bottom" src="assets/img/event1.jpg"></div>
+                <div class="box2 bb"><img class="card-img-bottom" src="assets/img/event2.jpg"></div>
+                <div class="box2 cc"><img class="card-img-bottom" src="assets/img/event3.jpg"></div>
+                <div class="box2 dd"><img class="card-img-bottom" src="assets/img/event4.jpg"></div>
+                <div class="box2 ee">E</div>
+              </div>
+             </div>
 
 
-              <div class="row">
-                <div class="col-sm-6">
-                  <div class="card" style="margin-left: 10px;">
-                    <div class="card-body">
-                      <img class="card-img-bottom" src="assets/img/achiever1.jpg" alt="Card image" style="width: 100%; height: 100%; padding-bottom: 20px;">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="card" style="margin-right: 10px;">
-                    <div class="card-body">
-                      <img class="card-img-bottom" src="assets/img/achiever2.jpg" alt="Card image" style="width: 100%; height: 100%; padding-bottom: 20px;">
-                    </div>
-                  </div>
-                </div>
-                <div class="container" align="center">
-                  <div class="about-read-more" align="center">
-                    <button type="button" class="btn-read-more" style="margin-top: 50px;">View More </button>
-                </div>
+
+          </div>
+        </section>
+
+
+        <section>
+          <div class="container-news">
             <div class="home-news-header" align="center">
+              <span class="d-inline-block header-span ">
+                <hr class="hr-title">
+                <p class="title-headers">News</p>
+                <hr class="hr-title">
               </div>
             </div>
           </section>
-
-            <div class="container-event">
-              <div class="event-header">
-                <span class="d-inline-block home-event-header">
-                  <hr style=" padding-right: 500px; display: inline-block; margin-right: 20px; margin-top: 100px; border-width: 2px; background-color: #d79b2a; margin-bottom: 5px;">
-                  <p style="display: inline-block;  margin-bottom: 40px;">Events</p>
-
-                <div class="container">
-                    <div class="col-sm-3">
-                    </div>
-                    <div class="col-sm-3">
-                    </div>
 
 
           <footer>
@@ -195,16 +196,13 @@
                 <div class="footer-community" align="center" style="padding-top: 10px;">
                   <h2> Ateneo Community</h2>
                   <span class="d-inline-block">
-                    <p>ATENEO LAW SCHOOL</p>
+                    <a href="http://ateneo.edu/aps/law/"><p>ATENEO LAW SCHOOL</p></a>
                     <p>|</p>
-                    <p >ADMISSION RESULT 2009</p>
-                    <p >|</p>
-                    <p >ADMISSION REQUIREMENTS</p>
+                  <a href="http://www.ateneo.edu/aps/law/admission-requirements">  <p >ADMISSION REQUIREMENTS</p> </a>
                     <p >|</p>
                     <p >FAQs</p>
                   </span>
                 </div>
-
 
                 <div class="footer-body">
                   <div class="row">
